vectorをEigenのvectorに変更

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,4 @@
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib)
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib)
 
-add_library(common3d vector.cc cube.cc math3d.cc neighborhood_map.cc)
+add_library(common3d vector.cc cube.cc neighborhood_map.cc)
